== Change Log

=== Edge

* Converted extension migrations to use schema_migrations table instead 
of extension_meta. [Nathaniel Talbott, Sean Cribbs, Rick DeNatale]
* Replaced scenarios with dataset. [Nathaniel Talbott, Adam Williams, Rick DeNatale]
* Fix RSpec git submodules. [Nathaniel Talbott, Clinton Nixon]
* Generate and fix gemspec for GitHub. [Sean Cribbs]

=== 0.7.0-RC1
* Add support for newer Textile and Markdown libraries, with fallbacks
on packaged libraries. [Sean Cribbs, Jason Garber]
* Make request parameters available to tags. [Brian Landau]
* Add URL method helpers to tags. [Brian Landau]
* Add some database indexes. [Yevgeny Smirnoff]
* Added notice to install RSpec if a certain database error occurs.
[Sytse Sijbrandij]
* Refactor LoginSystem to use filter-skipping instead of controller
tracking. [Sean Cribbs]
* Add generator specs and more generators. [Brian Landau]
* Add initial integration specs. [Adam Williams, Mark Imbriaco]
* Refactor admin controllers and views toward RESTful principles. 
[Sean Cribbs, Clinton Nixon, Rick DeNatale]
* Remove RSpec from packaged libraries. [Sean Cribbs]
* Correct CSS validation errors. [John Muhl]
* Add String#to_slug. [Andrew O'Brien]
* New page parts should have the default filter_id. [Joe Van Dyk]
* Show draft children by default on dev host. [Sean Cribbs]
* Correct db:schema:dump error when in instance mode. [Pat Allan, Sean Cribbs]
* Simplify set_javascripts_and_stylesheets. [Sean Cribbs]
* Cleanup boot.rb and allow generators from user-installed plugins. [Sean Cribbs]
* Added regions to user-preferences screen. [Jim Gay]
* Apply Rails redirect sanitization patch. [Sean Cribbs]
* Updated to Rspec and Rspec-Rails 1.1.8 [Jim Gay]
* Added development dependency to INSTALL [Matt Henry]
* Added reference to sample database configuration files to INSTALL. [Keith Bennett]
* Added ZenTest development dependency to README. [Thomas Ingram]
* Remove REXML expansion fix, included in Rails 2.1.1 [Sean Cribbs]