@@ -6,6 +6,7 @@ core:
 
 === Edge
 
+* Erik Ostrom
 * Nathaniel Talbott
 * Clinton Nixon
 * Sean Cribbs
