@@ -1,0 +1,3 @@
+class SpecialCharactersExtension < Radiant::Extension
+  extension_name "Special Characters 'n' Such"
+end
