@@ -1,3 +1,0 @@
-class SpecialNameExtension < Radiant::Extension
-  extension_name "Apostrophes 'n' Such"
-end
