@@ -2,6 +2,8 @@
 
 === Edge
 
+* Handle SQL special characters in extension names in migrations. 
+[Erik Ostrom]
 * Converted extension migrations to use schema_migrations table instead 
 of extension_meta. [Nathaniel Talbott, Sean Cribbs, Rick DeNatale]
 * Replaced scenarios with dataset. [Nathaniel Talbott, Adam Williams, Rick DeNatale]
